[package]
name = "protoc-fetcher"
authors = ["Joe Dahlquist <joe@arcanyx.com>"]
categories = ["compilers", "development-tools::build-utils", "parsing", "web-programming", "network-programming"]
description = "Fetches official Protocol Buffer compiler (protoc) releases for use in build scripts"
documentation = "https://docs.rs/protoc-fetcher"
edition = "2021"
homepage = "https://github.com/arcanyx-pub/protoc-fetcher"
keywords = ["protoc", "grpc", "tonic", "protobuf", "prost"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/arcanyx-pub/protoc-fetcher"
version = "0.1.1"

[dependencies]
anyhow = "1.0.81"
reqwest = { version = "0.12.9", features = ["blocking"] }
zip = "2.2.1"

[dev-dependencies]
googletest = "0.12.0"
tempfile = "3.14.0"
tonic-build = "0.12.3"
